Fixed logo spacing on the login page.

--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -21,7 +21,7 @@ body
 
 	padding: 100px;
 	padding-top: 50px;
-	padding-bottom: 80px;
+	padding-bottom: 50px;
 
 	-webkit-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.20);
 	-moz-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.20);
